--- a/src/main/resources/templates/todolist.html
+++ b/src/main/resources/templates/todolist.html
@@ -16,32 +16,58 @@
     <br/>
     <hr>
     <br/>
-    <ul class="list-group">
-        <div class="row" th:each="taskWithAttribute: ${tasksWithAttribute}">
-            <li class="list-group-item d-flex justify-content-between align-items-center">
-                <div class="row" th:if="${taskWithAttribute.afterNow}">
-                    <div th:if="${taskWithAttribute.task.endDate} == null">
-                        <a th:href="@{'/edit?id=' + ${taskWithAttribute.task.id}}">
-                            <p th:text="${taskWithAttribute.task.title}">
-                            </p>
-                        </a>
-                        <p th:style="|color: red; font-style: italic|" th:text="|  ${taskWithAttribute.task.description}  ${taskWithAttribute.task.category}
-                             ${taskWithAttribute.task.startDate}  zadanie nieukończone |">
-                        </p>
+     <div >
+        <table class="table">
+            <thead class="thead-light">
+            <tr>
+                <th >Tytuł zadania</th>
+                <th >Opis</th>
+                <th>Kategoria</th>
+                <th>Data początkowa</th>
+                <th>Data zamknięcia</th>
+                <th>Zadanie zakończono w(dni):</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each = "taskWithAttribute: ${tasksWithAttribute}">
+                <td> <a th:href="@{'/edit?id=' + ${taskWithAttribute.task.id}}" >
+                    <p th:text="${taskWithAttribute.task.title}">
+                    </p></a>
+                </td>
+                <div  th:if="${taskWithAttribute.afterNow}">
+                    <div>
+                        <td th:style="|color: red; font-style: italic |" th:text="${taskWithAttribute.task.description}"></td>
+                        <td th:style="|color: red; font-style: italic |" th:text="${taskWithAttribute.task.category}"></td>
+                        <td th:style="|color: red; font-style: italic |" th:text="${taskWithAttribute.task.startDate}"></td>
+                        <td th:style="|color: red; font-style: italic |" th:text="${taskWithAttribute.task.endDate}"></td>
+                        <div  th:if="${taskWithAttribute.task.endDate} != null">
+                            <td th:style="|color: red; font-style: italic |" th:text="|${taskWithAttribute.duration} |"></td>
+                        </div>
+                        <div  th:unless="${taskWithAttribute.task.endDate} != null">
+                            <td th:style="|color: red; font-style: italic |" th:text="| nieukończone |"></td>
+                        </div>
                     </div>
+
                 </div>
-                <div class="row" th:unless="${taskWithAttribute.afterNow}">
-                    <div th:if="${taskWithAttribute.task.endDate} == null">
-                        <a th:href="@{'/edit?id=' + ${taskWithAttribute.task.id}}">
-                            <p th:text="${taskWithAttribute.task.title}">
-                            </p>
-                        </a>
-                        <p th:text="|  ${taskWithAttribute.task.description}  ${taskWithAttribute.task.category}  ${taskWithAttribute.task.startDate}  zadanie nieukończone|">
-                        </p>
+                <div  th:unless="${taskWithAttribute.afterNow}">
+                    <div>
+                        <td th:text="${taskWithAttribute.task.description}"></td>
+                        <td th:text="${taskWithAttribute.task.category}"></td>
+                        <td th:text="${taskWithAttribute.task.startDate}"></td>
+                        <td th:text="${taskWithAttribute.task.endDate}"></td>
+                        <div  th:if="${taskWithAttribute.task.endDate} != null">
+                            <td th:text="|${taskWithAttribute.duration} |"></td>
+                        </div>
+                        <div  th:unless="${taskWithAttribute.task.endDate} != null">
+                            <td th:text="| nieukończone |"></td>
+                        </div>
                     </div>
+
                 </div>
-            </li>
-        </div>
-    </ul>
+            </tr>
+
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
